--- a/UcasProjectManagement/UcasProWindowsForm/Reports/rptProject.rdlc
+++ b/UcasProjectManagement/UcasProWindowsForm/Reports/rptProject.rdlc
@@ -23,8 +23,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>0.34078cm</Top>
-        <Left>15.73954cm</Left>
+        <Top>3.02244cm</Top>
+        <Left>16.37454cm</Left>
         <Height>0.74221cm</Height>
         <Width>2.12076cm</Width>
         <Style>
@@ -60,8 +60,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>0.34078cm</Top>
-        <Left>8.12743cm</Left>
+        <Top>3.02244cm</Top>
+        <Left>8.76243cm</Left>
         <Height>0.74221cm</Height>
         <Width>7.57683cm</Width>
         <ZIndex>1</ZIndex>
@@ -97,8 +97,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>1.36688cm</Top>
-        <Left>15.56314cm</Left>
+        <Top>4.04854cm</Top>
+        <Left>16.19814cm</Left>
         <Height>1.98575cm</Height>
         <Width>2.29716cm</Width>
         <ZIndex>2</ZIndex>
@@ -134,8 +134,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>1.36688cm</Top>
-        <Left>1.05106cm</Left>
+        <Top>4.04854cm</Top>
+        <Left>1.68606cm</Left>
         <Height>1.98575cm</Height>
         <Width>14.51208cm</Width>
         <ZIndex>3</ZIndex>
@@ -171,8 +171,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>3.68198cm</Top>
-        <Left>15.73954cm</Left>
+        <Top>6.36364cm</Top>
+        <Left>16.37454cm</Left>
         <Height>0.74221cm</Height>
         <Width>2.12076cm</Width>
         <ZIndex>4</ZIndex>
@@ -209,8 +209,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>3.7349cm</Top>
-        <Left>9.95716cm</Left>
+        <Top>6.29171cm</Top>
+        <Left>4.54765cm</Left>
         <Height>0.74221cm</Height>
         <Width>2.12076cm</Width>
         <ZIndex>5</ZIndex>
@@ -247,8 +247,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>3.68198cm</Top>
-        <Left>12.96613cm</Left>
+        <Top>6.36364cm</Top>
+        <Left>13.60113cm</Left>
         <Height>0.74221cm</Height>
         <Width>2.77341cm</Width>
         <ZIndex>6</ZIndex>
@@ -284,8 +284,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>3.7349cm</Top>
-        <Left>7.09557cm</Left>
+        <Top>6.29171cm</Top>
+        <Left>1.68606cm</Left>
         <Height>0.74221cm</Height>
         <Width>2.86159cm</Width>
         <ZIndex>7</ZIndex>
@@ -321,8 +321,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>4.84615cm</Top>
-        <Left>14.9587cm</Left>
+        <Top>7.52781cm</Top>
+        <Left>15.5937cm</Left>
         <Height>0.74221cm</Height>
         <Width>2.83104cm</Width>
         <ZIndex>8</ZIndex>
@@ -358,8 +358,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>4.84615cm</Top>
-        <Left>12.58217cm</Left>
+        <Top>7.52781cm</Top>
+        <Left>13.21717cm</Left>
         <Height>0.74221cm</Height>
         <Width>2.34125cm</Width>
         <ZIndex>9</ZIndex>
@@ -395,7 +395,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>4.84615cm</Top>
+        <Top>7.52781cm</Top>
         <Left>10.77736cm</Left>
         <Height>0.74221cm</Height>
         <Width>1.30056cm</Width>
@@ -432,7 +432,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>4.84615cm</Top>
+        <Top>7.52781cm</Top>
         <Left>8.43611cm</Left>
         <Height>0.74221cm</Height>
         <Width>2.34125cm</Width>
@@ -469,7 +469,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox19</rd:DefaultName>
-        <Top>6.18553cm</Top>
+        <Top>8.90248cm</Top>
         <Left>5.75654cm</Left>
         <Height>1.03469cm</Height>
         <Width>7.02438cm</Width>
@@ -505,7 +505,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>7.39662cm</Top>
+        <Top>10.07828cm</Top>
         <Left>14.81349cm</Left>
         <Height>0.74221cm</Height>
         <Width>3.69063cm</Width>
@@ -541,7 +541,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>7.39662cm</Top>
+        <Top>10.07828cm</Top>
         <Left>11.64321cm</Left>
         <Height>0.74221cm</Height>
         <Width>3.18792cm</Width>
@@ -577,7 +577,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>8.35188cm</Top>
+        <Top>11.03354cm</Top>
         <Left>14.81349cm</Left>
         <Height>0.74221cm</Height>
         <Width>3.69063cm</Width>
@@ -613,7 +613,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>8.35188cm</Top>
+        <Top>11.03354cm</Top>
         <Left>11.64321cm</Left>
         <Height>0.74221cm</Height>
         <Width>3.20556cm</Width>
@@ -649,7 +649,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>9.30438cm</Top>
+        <Top>11.98604cm</Top>
         <Left>14.81349cm</Left>
         <Height>0.74221cm</Height>
         <Width>3.69063cm</Width>
@@ -685,7 +685,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>9.30438cm</Top>
+        <Top>11.98604cm</Top>
         <Left>11.62557cm</Left>
         <Height>0.74221cm</Height>
         <Width>3.20556cm</Width>
@@ -721,7 +721,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>10.29656cm</Top>
+        <Top>12.97822cm</Top>
         <Left>14.78703cm</Left>
         <Height>0.74221cm</Height>
         <Width>3.69063cm</Width>
@@ -757,7 +757,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>10.29656cm</Top>
+        <Top>12.97822cm</Top>
         <Left>11.64321cm</Left>
         <Height>0.74221cm</Height>
         <Width>3.16146cm</Width>
@@ -774,7 +774,7 @@
         </Style>
       </Textbox>
       <Line Name="Line3">
-        <Top>11.49628cm</Top>
+        <Top>14.17794cm</Top>
         <Height>0cm</Height>
         <Width>19.08558cm</Width>
         <ZIndex>21</ZIndex>
@@ -806,7 +806,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox19</rd:DefaultName>
-        <Top>11.69913cm</Top>
+        <Top>14.38079cm</Top>
         <Left>5.75654cm</Left>
         <Height>0.93597cm</Height>
         <Width>7.02438cm</Width>
@@ -843,8 +843,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>4.84615cm</Top>
-        <Left>5.57646cm</Left>
+        <Top>7.52781cm</Top>
+        <Left>4.49753cm</Left>
         <Height>0.74221cm</Height>
         <Width>2.12076cm</Width>
         <ZIndex>23</ZIndex>
@@ -880,8 +880,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>4.84615cm</Top>
-        <Left>4.03778cm</Left>
+        <Top>7.52781cm</Top>
+        <Left>2.95885cm</Left>
         <Height>0.74221cm</Height>
         <Width>1.53868cm</Width>
         <ZIndex>24</ZIndex>
@@ -900,10 +900,10 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>8.27859cm</Width>
+              <Width>9.94233cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>5.18552cm</Width>
+              <Width>6.84926cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -1035,7 +1035,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Right</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>DonorsName</rd:DefaultName>
@@ -1130,10 +1132,10 @@
         </TablixRowHierarchy>
         <LayoutDirection>RTL</LayoutDirection>
         <DataSetName>ProjectDataSet</DataSetName>
-        <Top>13.12016cm</Top>
-        <Left>2.24015cm</Left>
+        <Top>15.80182cm</Top>
+        <Left>1.68606cm</Left>
         <Height>1.5616cm</Height>
-        <Width>13.46411cm</Width>
+        <Width>16.7916cm</Width>
         <ZIndex>25</ZIndex>
         <Style>
           <Border>
@@ -1154,7 +1156,7 @@
         </Style>
       </Tablix>
       <Line Name="Line4">
-        <Top>6.00914cm</Top>
+        <Top>8.6908cm</Top>
         <Left>0.03528cm</Left>
         <Height>0cm</Height>
         <Width>19.08558cm</Width>
@@ -1193,7 +1195,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>7.39662cm</Top>
+        <Top>10.07828cm</Top>
         <Left>9.30196cm</Left>
         <Height>0.74221cm</Height>
         <Width>2.34125cm</Width>
@@ -1236,7 +1238,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>8.35188cm</Top>
+        <Top>11.03354cm</Top>
         <Left>9.30196cm</Left>
         <Height>0.74221cm</Height>
         <Width>2.34125cm</Width>
@@ -1279,7 +1281,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>9.30438cm</Top>
+        <Top>11.98604cm</Top>
         <Left>9.28432cm</Left>
         <Height>0.74221cm</Height>
         <Width>2.34125cm</Width>
@@ -1322,7 +1324,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>10.29656cm</Top>
+        <Top>12.97822cm</Top>
         <Left>9.30196cm</Left>
         <Height>0.74221cm</Height>
         <Width>2.34125cm</Width>
@@ -1358,8 +1360,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox7</rd:DefaultName>
-        <Top>4.84615cm</Top>
-        <Left>3.31908cm</Left>
+        <Top>7.52781cm</Top>
+        <Left>2.24015cm</Left>
         <Height>0.74221cm</Height>
         <Width>0.68342cm</Width>
         <ZIndex>31</ZIndex>
@@ -1374,14 +1376,51 @@
           <Direction>RTL</Direction>
         </Style>
       </Textbox>
+      <Textbox Name="Textbox36">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>ملخص المشروع</Value>
+                <Style>
+                  <FontFamily>Simplified Arabic</FontFamily>
+                  <FontSize>14pt</FontSize>
+                  <FontWeight>Bold</FontWeight>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style>
+              <TextAlign>Center</TextAlign>
+            </Style>
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox19</rd:DefaultName>
+        <Top>0.35889cm</Top>
+        <Left>6.0747cm</Left>
+        <Height>1.03469cm</Height>
+        <Width>7.02438cm</Width>
+        <ZIndex>32</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <BackgroundColor>LightGrey</BackgroundColor>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
     </ReportItems>
-    <Height>5.89828in</Height>
+    <Height>7.00245in</Height>
     <Style />
   </Body>
-  <Width>7.5279in</Width>
+  <Width>7.54873in</Width>
   <Page>
     <PageHeader>
-      <Height>2.54cm</Height>
+      <Height>2.56646cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <Style>
